--- a/2.html
+++ b/2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="indexx.html">WHO IS THIS GUY?</a></h1>
+  <h1><a href="index.html">WHO IS THIS GUY?</a></h1>
 <ol>
   <li> <a href="1.html">INTRODUCE</a></li>
   <li> <a href="2.html">LICENSE</a></li>
@@ -19,10 +19,21 @@
   <li>Engineer Interior Architecture</li>
 </ul>
 <h2>PROGRAMME</h2>
-    PHOTOSHOP <style="margin-right:30px;"> AUTOCAD2D    VRAY
-<br>ILLUSTRATOR    SKETCHUP     RHYNO
-<br>INDESIGN      3DXMAX     BLENDER
-<br>AFTEREFFECT     LUMION   ENSCAPE
+<br>  <h4>Adobe</h4>
+    PHOTOSHOP
+  <br>  ILLUSTRATOR
+  <br>  AFTEREFFECT
+  <br>  INDESIGN<P>
+  <h4>Modeling</h4>
+   SKETCHUP
+  <br> 3D3MAX
+  <br> BLENDER
+  <br> RHYNO
+  <h4>Rendering</h4>
+  LUMION
+<br>  ENSCAPE
+<br>  VRAY
+
 
 </body>
 </html>
