--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!doctype html>
 <html>
 <head>
-  <title>WHO IS THIS GUY? - POTENTIAL</title>
+  <title>WHO IS THIS GUY? - WELCOME!</title>
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">WHO IS THIS GUY?</a></h1>
+  <h1>WHO IS THIS GUY?</h1>
+
+<h2>A Man Stepping to Foward!</h2>
+<img src="C:\Users\202105f4\Desktop\web\istockphoto-874231466-612x612.jpg" width=300px>
+<br>ARE YOU READY FOR GET TO KNOW ABOUT HIM?
+
+
 <ol>
   <li> <a href="1.html">INTRODUCE</a></li>
   <li> <a href="2.html">LICENSE</a></li>
   <li> <a href="3.html">PORTFOLIO</a></li>
   <li> <a href="4.html">POTENTIAL</a></li>
 </ol>
-<h2>POTENTIAL 잠재력</h2>
 
+
+
+</body>
 </html>
