--- a/3.html
+++ b/3.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="indexx.html">WHO IS THIS GUY?</a></h1>
+  <h1><a href="index.html">WHO IS THIS GUY?</a></h1>
 <ol>
   <li> <a href="1.html">INTRODUCE</a></li>
   <li> <a href="2.html">LICENSE</a></li>
