--- a/2.html
+++ b/2.html
@@ -20,20 +20,24 @@
 </ul>
 <h2>PROGRAMME</h2>
 <br>  <h4>Adobe</h4>
-    PHOTOSHOP
-  <br>  ILLUSTRATOR
-  <br>  AFTEREFFECT
-  <br>  INDESIGN<P>
+<ul>
+  <li>  PHOTOSHOP</li>
+  <li>  ILLUSTRATOR</li>
+  <li>  AFTEREFFECT</li>
+  <li>  INDESIGN</li>
+</ul>
   <h4>Modeling</h4>
-   SKETCHUP
-  <br> 3D3MAX
-  <br> BLENDER
-  <br> RHYNO
+<ul>  <li>  SKETCHUP</li>
+  <li>  3D3MAX</li>
+  <li>  BLENDER</li>
+  <li>  RHYNO</li>
+</ul>
   <h4>Rendering</h4>
-  LUMION
-<br>  ENSCAPE
-<br>  VRAY
-
+<ul>
+  <li> LUMION</li>
+  <li> ENSCAPE</li>
+  <li> VRAY</li>
+</ul>
 
 </body>
 </html>
