--- a/4.html
+++ b/4.html
@@ -13,5 +13,25 @@
   <li> <a href="4.html">POTENTIAL</a></li>
 </ol>
 <h2>POTENTIAL 잠재력</h2>
+<br><h3>HE CAN CREATE A LOT OF CONTENTS!</h3>
+<ul>
+<li><strong>CREATE VIDEO CONTENTS.</strong></li>
+    <br> <a href="https://youtu.be/4vUoq3xnqtE" target="_blank" title="어때 지리지?">
+    THIS IS THE FIRST VIDEO WHAT I MADE.</a>
+<p><br>
+<li>  <strong>TAKE BEAUTIFUL IMAGES FROM VIRTUAL SPACES.</strong></li>
+<br>  <img src="image1.jpg" width="440px">
+<br>  <img src="image2.jpg" width="440px"> Commercial Design
+<br>  <p><img src="living.png" width="440px"> Living Design</p>
+
+<p><br>
+  <li><strong>EXPRESSING CREATED SPACE AS A DRAWING</strong></li>
+  <p><img src="plan.png" width="440px">
+<img src="plan2.png" width="440px"> Floor Plan</p>
+</ul>
+
+
+
+
 
 </html>
