--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>WHO IS THIS GUY?</h1>
 
 <h2>A Man Stepping to Foward!</h2>
-<img src="C:\Users\202105f4\Desktop\web\istockphoto-874231466-612x612.jpg" width=300px>
+<img src="step.jpg" width=300px>
 <br>ARE YOU READY FOR GET TO KNOW ABOUT HIM?
 
 
