--- a/1.html
+++ b/1.html
@@ -16,17 +16,17 @@
 <br>LET ME INTRODUCE MYSELF.<p>
 <br>HELLO MY NAME IS <strong>TAEWAN KOO.</strong>
   <br><br><strong><a href="https://www.instagram.com/81.9th_wan/"
-target="_blank" title="instagram 81.9th_wan">Click here!</a></strong><br>
+target="_blank" title="instagram 81.9th_wan"><h3>Click here!</h3></a></strong><br>
 <br>I'M FROM <STRONG>BUSAN IN <U>SOUTH KOREA</U></STRONG>
 WELCOME.
 <br>I'M WAKE UP IN THE MORNING AND SOMETIMES IN AFTERNOON. HAHAHA..<p>
 ABVIOUSLY AFTERNOON IS MORE OFTEN. <br>ANYWAY I'M JUST TYPEING ANY WORD IN THIS CODE TO FILL THE SENTENCES
 AND MAKE THIS <br>DOCUMENT SEEMS MORE PROFESSIONAL.<br>
 <p><strong>AM I LOOK LIKE <u>PROFESSIONAL?</u></strong><p>
-<img src="C:\Users\202105f4\Desktop\web\메인1.jpg" width=550px>
-  <br><h5>I can do like this.</h5>
-<img src="C:\Users\202105f4\Desktop\web\1.입원last.png" width=550px>
-    <br><h5>And even can do this.</h5>
+<img src="main.jpg" width=550px>
+  I can do like this.
+<img src="room.png" width=550px>
+    And even can do this.
 <br><br>YES EXACTLY THANK YOU. AND I CAN EVEN INCREASE MY ENGLISH TYPING SPEED.
 <br>IT HAS A LOT OF BENEFIT.</p>
 WHY THAT SENTENCES HAS NOT DISTINGISHED IN WEB DOCUMENT LET ME KNOW THE REASON.
