--- a/1.html
+++ b/1.html
@@ -3,34 +3,93 @@
 <head>
   <title>WHO IS THIS GUY? - INTRODUCE</title>
   <meta charset="utf-8">
+<style>
+  body{
+    margin:0;
+  }
+    a {color:black;
+      text-decoration: none;
+    }
+  h1 {
+    font-size:35px;
+    text-align: center;
+    border-bottom:1px solid gray;
+    margin:0;
+    padding:20px;
+  }
+  h2{
+   margin:0;
+   font-size: 25px;
+
+    border-bottom:1px solid violet;
+    width: 130px;
+    color: violet;
+  }
+  ol{
+    border-right:1px solid gray;
+    width: 150px;
+    margin:5px;
+    padding: 20px;
+  }
+  #grid{
+    display: grid;
+    grid-template-columns: 220px 1fr 1fr;
+    }
+  #active {color :red;}
+</style>
+
 </head>
 <body>
   <h1><a href="index.html">WHO IS THIS GUY?</a></h1>
-<ol>
-  <li> <a href="1.html">INTRODUCE</a></li>
-  <li> <a href="2.html">LICENSE</a></li>
-  <li> <a href="3.html">PORTFOLIO</a></li>
-  <li> <a href="4.html">POTENTIAL</a></li>
-</ol>
-<h2>INTRODUCE 알아보기</h2>
-<br>LET ME INTRODUCE MYSELF.<p>
-<br>HELLO MY NAME IS <strong>TAEWAN KOO.</strong>
-  <br><br><strong><a href="https://www.instagram.com/81.9th_wan/"
-target="_blank" title="instagram 81.9th_wan"><h3>Click here!</h3></a></strong><br>
-<br>I'M FROM <STRONG>BUSAN IN <U>SOUTH KOREA</U></STRONG>
-WELCOME.
-<br>I'M WAKE UP IN THE MORNING AND SOMETIMES IN AFTERNOON. HAHAHA..<p>
-ABVIOUSLY AFTERNOON IS MORE OFTEN. <br>ANYWAY I'M JUST TYPEING ANY WORD IN THIS CODE TO FILL THE SENTENCES
-AND MAKE THIS <br>DOCUMENT SEEMS MORE PROFESSIONAL.<br>
-<p><strong>AM I LOOK LIKE <u>PROFESSIONAL?</u></strong><p>
-<img src="main.jpg" width=550px>
-  I can do like this.
-<img src="room.png" width=550px>
-    And even can do this.
-<br><br>YES EXACTLY THANK YOU. AND I CAN EVEN INCREASE MY ENGLISH TYPING SPEED.
-<br>IT HAS A LOT OF BENEFIT.</p>
-WHY THAT SENTENCES HAS NOT DISTINGISHED IN WEB DOCUMENT LET ME KNOW THE REASON.
-<br>OH MY GOD I SUDDENLY REALIZE THAT I'M BETTER AT ENGLISH AS FAR AS I THOUGHT!!
+
+<div id="grid">
+  <div>
+    <ol>
+      <li> <a href="1.html" id="active">INTRODUCE</a></li>
+      <li> <a href="2.html">LICENSE</a></li>
+      <li> <a href="3.html">PORTFOLIO</a></li>
+      <li> <a href="4.html">POTENTIAL</a></li>
+    </ol>
+  </div>
+
+  <div>
+    <h3>INTRODUCE 알아보기</h3>
+    <br>LET ME INTRODUCE MYSELF.<p>
+    <br>HELLO MY NAME IS <strong>TAEWAN KOO.</strong>
+    <div id="insta"> <strong><a href="https://www.instagram.com/81.9th_wan/"
+    target="_blank" title="instagram 81.9th_wan"><h2>Click here!</h2></a></strong></div><br>
+    I'M FROM <STRONG>BUSAN IN <U>SOUTH KOREA</U></STRONG>
+    WELCOME.
+    <br>I'M WAKE UP IN THE MORNING AND SOMETIMES IN AFTERNOON. HAHAHA..<p>
+    ABVIOUSLY AFTERNOON IS MORE OFTEN. <br>ANYWAY I'M JUST TYPEING ANY WORD IN THIS CODE TO FILL THE SENTENCES
+    AND MAKE THIS <br>DOCUMENT SEEMS MORE PROFESSIONAL.<br>
+    <p><strong>AM I LOOK LIKE <u>PROFESSIONAL?</u></strong><p>
+
+      <img src="main.jpg" width=550px>
+        <p><h5>
+          THIS PROJECT WAS PLANED TO BUILD COMMERCIAL SPACE IN SEOUL IN SOUTH KOREA.<br>
+        WE DECIDED TO BUILD THE STORE FOR ACNE STUDIO WHICH IS A FASHION BRAND LAUNCHED IN SWEDEN.<br>
+        SO WE TRY TO COMPOUND MINIMALISM WITH KOREA TRADITIONAL ARCHITECTURAL ELEMENTS.</P><h5>
+
+
+  <img src="room.png" width=550px>
+      <p><h5>THIS IMAGE SHOWS THE WAY OF HOW MEDICAL SPACE SHOULD DEVELOP.<br>
+        AS TECHNOLOGY ADVANCES OVER TIME, THE RELATIONSHIP BETWEEN MEDICAL STAFF AND PATIENT
+        WILL BE CONSIDERED AS A SIGNIFICANT FACTOR WHEN PLANNING THE SPATIAL PROGRAME.<br>
+        SO WE INSERT COMMON SPACE BETWEEN BOTH OF PRIVATE SPACES TO INCREASE RAPPORT WITH EVERYONE.</p></h5>
+
+
+    <br>
+    <p><h6>THIS IMAGES ARE CREATED IN VIRTUAL SPACES MADE OUT OF COMPUTER PROGRAM.<br>
+    SOMEDAY I'M GOING TO UPDATE THAT IAMGES AS A LINK TO EACH PROJCTS CONTENTS.</p></h6>
+
+    <br><br>YES EXACTLY THANK YOU. AND I CAN EVEN INCREASE MY ENGLISH TYPING SPEED.
+    <br>IT HAS A LOT OF BENEFIT.</p>
+    WHY THAT SENTENCES HAS NOT DISTINGISHED IN WEB DOCUMENT LET ME KNOW THE REASON.
+    <br>OH MY GOD I SUDDENLY REALIZE THAT I'M BETTER AT ENGLISH AS FAR AS I THOUGHT!!
+  </div>
+</div>
+</div>
 
 <p>
   <div id="disqus_thread"></div>
