--- a/index.html
+++ b/index.html
@@ -3,22 +3,59 @@
 <head>
   <title>WHO IS THIS GUY? - WELCOME!</title>
   <meta charset="utf-8">
+  <style>
+  body{
+    margin:0;
+  }
+    a {color:black;
+      text-decoration: none;
+    }
+  h1 {
+    font-size:50px;
+    text-align: center;
+    border-bottom:1px solid gray;
+    margin:0;
+    padding:20px;}
+  h3 {
+    text-align: center;
+    font-size: 30px;
+   }
+ .center {
+   display: block;
+   margin-left:auto;
+   margin-right: auto;
+   width:50%;
+ }
+ div{
+   display:block;
+   margin-left:auto;
+   margin-right: auto;
+   width :50%
+   }
+  a{
+    color: blue;
+  }
+
+  </style>
+
 </head>
 <body>
-  <h1>WHO IS THIS GUY?</h1>
+<h1>WHO IS THIS GUY?</h1>
 
-<h2>A Man Stepping to Foward!</h2>
-<img src="step.jpg" width=300px>
-<br>ARE YOU READY FOR GET TO KNOW ABOUT HIM?
+<h3>A Man Stepping to Foward!</h3>
+<img src="step.jpg" width=550px class="center">
 
+<div>
+  <br>ARE YOU READY FOR GET TO KNOW ABOUT HIM?
 
-<ol>
-  <li> <a href="1.html">INTRODUCE</a></li>
-  <li> <a href="2.html">LICENSE</a></li>
-  <li> <a href="3.html">PORTFOLIO</a></li>
-  <li> <a href="4.html">POTENTIAL</a></li>
-</ol>
+  <ol>
+    <li> <a href="1.html">INTRODUCE</a></li>
+    <li> <a href="2.html">LICENSE</a></li>
+    <li> <a href="3.html">PORTFOLIO</a></li>
+    <li> <a href="4.html">POTENTIAL</a></li>
+  </ol>
 
+</div>
 <p>
   <div id="disqus_thread"></div>
   <script>
