--- a/index.html
+++ b/index.html
@@ -11,49 +11,83 @@
       text-decoration: none;
     }
   h1 {
-    font-size:50px;
+    font-size:60px;
     text-align: center;
-    border-bottom:1px solid gray;
+
     margin:0;
     padding:20px;}
   h3 {
     text-align: center;
     font-size: 30px;
+    margin-top: 50px;
+    padding-bottom: 10px;
+    font-weight: 500;
+    margin-left: 650px;
+
    }
  .center {
    display: block;
    margin-left:auto;
    margin-right: auto;
-   width:50%;
+   width:100%;
  }
- div{
-   display:block;
-   margin-left:auto;
-   margin-right: auto;
-   width :50%
-   }
+
+ li{
+   float: left;
+   margin-left: 80px;
+   background-color:  rgba(255,255,255, 0.9);
+   margin-top: 30px;
+   padding-left: 10px;
+   padding-right: 10px;
+
+
+ }
+ ul{
+   display: block;
+   font-size: 25px;
+     list-style-type: none;
+     margin: 0;
+      }
+
   a{
-    color: blue;
+    color: gray;
+    font-weight: bold;
   }
+  body{
+    background-image: url("jh.png");
+    background-color: #cccccc;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+   }
+   .menu{
+     margin-top: 230px;
+     font-size: 25px
 
-  </style>
+   }
+   h4{
+    color: white;
+    margin-left: 10px;
+   }
 
+ </style>
 </head>
 <body>
 <h1>WHO IS THIS GUY?</h1>
 
 <h3>A Man Stepping to Foward!</h3>
-<img src="step.jpg" width=550px class="center">
 
-<div>
-  <br>ARE YOU READY FOR GET TO KNOW ABOUT HIM?
 
-  <ol>
+<div class="menu">
+  <br><h4>ARE YOU READY FOR GET TO KNOW ABOUT HIM?</h4>
+
+  <ul>
     <li> <a href="1.html">INTRODUCE</a></li>
     <li> <a href="2.html">LICENSE</a></li>
     <li> <a href="3.html">PORTFOLIO</a></li>
     <li> <a href="4.html">POTENTIAL</a></li>
-  </ol>
+  </ul>
 
 </div>
 <p>
