--- a/1.html
+++ b/1.html
@@ -17,7 +17,7 @@
     margin:0;
     padding:20px;
   }
-  h2{
+  .insta {
    margin:0;
    font-size: 25px;
 
@@ -43,21 +43,22 @@
   <h1><a href="index.html">WHO IS THIS GUY?</a></h1>
 
 <div id="grid">
-  <div>
+
     <ol>
       <li> <a href="1.html" id="active">INTRODUCE</a></li>
       <li> <a href="2.html">LICENSE</a></li>
       <li> <a href="3.html">PORTFOLIO</a></li>
       <li> <a href="4.html">POTENTIAL</a></li>
     </ol>
-  </div>
+
 
   <div>
-    <h3>INTRODUCE 알아보기</h3>
+    <h2>INTRODUCE 알아보기</h2>
     <br>LET ME INTRODUCE MYSELF.<p>
     <br>HELLO MY NAME IS <strong>TAEWAN KOO.</strong>
-    <div id="insta"> <strong><a href="https://www.instagram.com/81.9th_wan/"
-    target="_blank" title="instagram 81.9th_wan"><h2>Click here!</h2></a></strong></div><br>
+      <div id="insta"> <strong><a href="https://www.instagram.com/81.9th_wan/"
+      target="_blank" title="instagram 81.9th_wan" class="insta">>Click here!</a></strong>
+      </div><br>
     I'M FROM <STRONG>BUSAN IN <U>SOUTH KOREA</U></STRONG>
     WELCOME.
     <br>I'M WAKE UP IN THE MORNING AND SOMETIMES IN AFTERNOON. HAHAHA..<p>
@@ -65,7 +66,7 @@
     AND MAKE THIS <br>DOCUMENT SEEMS MORE PROFESSIONAL.<br>
     <p><strong>AM I LOOK LIKE <u>PROFESSIONAL?</u></strong><p>
 
-      <img src="main.jpg" width=550px>
+      <img src="main.jpg" width=100%>
         <p><h5>
           THIS PROJECT WAS PLANED TO BUILD COMMERCIAL SPACE IN SEOUL IN SOUTH KOREA.<br>
         WE DECIDED TO BUILD THE STORE FOR ACNE STUDIO WHICH IS A FASHION BRAND LAUNCHED IN SWEDEN.<br>
@@ -87,7 +88,7 @@
     <br>IT HAS A LOT OF BENEFIT.</p>
     WHY THAT SENTENCES HAS NOT DISTINGISHED IN WEB DOCUMENT LET ME KNOW THE REASON.
     <br>OH MY GOD I SUDDENLY REALIZE THAT I'M BETTER AT ENGLISH AS FAR AS I THOUGHT!!
-  </div>
+
 </div>
 </div>
 
