--- a/2.html
+++ b/2.html
@@ -33,13 +33,16 @@
 </head>
 <body>
   <h1><a href="index.html">WHO IS THIS GUY?</a></h1>
+
 <div id="grid">
-  <div>
- <ol>
-  <li> <a href="1.html" class="saw">INTRODUCE</a></li>
-  <li> <a href="2.html" class="saw" id="active" >LICENSE</a></li>
-  <li> <a href="3.html">PORTFOLIO</a></li>
-  <li> <a href="4.html">POTENTIAL</a></li></div>
+
+   <ol>
+    <li> <a href="1.html" class="saw">INTRODUCE</a></li>
+    <li> <a href="2.html" class="saw" id="active" >LICENSE</a></li>
+    <li> <a href="3.html">PORTFOLIO</a></li>
+    <li> <a href="4.html">POTENTIAL</a></li>
+  </ol>
+
   <div>
     <h2>LICENSE 자격증</h2>
     <ul>
@@ -47,7 +50,7 @@
       <li>Craftsman Computer Aided Architectural Drawing</li>
       <li>Engineer Interior Architecture</li>
     </ul>
-    <div>
+
   <br>
     <h2>PROGRAMME</h2>
       <h4 >Adobe</h4>
@@ -73,7 +76,7 @@
       <li> ENSCAPE</li>
       <li> VRAY</li>
     </ul>
-  </div>
+
   </div>
 </div>
 
