--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
     color: white;
     margin-left: 10px;
    }
-
+   {
+     margin-top: 500px;
+   }
  </style>
 </head>
 <body>
@@ -90,7 +92,9 @@
   </ul>
 
 </div>
-<p>
+<br>
+<br>
+<p class="link">
   <div id="disqus_thread"></div>
   <script>
       /**
