--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
    {
      margin-top: 500px;
    }
+   div{
+     margin-top: 180px;
+   }
  </style>
 </head>
 <body>
@@ -94,7 +97,8 @@
 </div>
 <br>
 <br>
-<p class="link">
+<p>
+  <div>
   <div id="disqus_thread"></div>
   <script>
       /**
@@ -117,7 +121,7 @@
 
 
 
-
+</div>
 </p>
 
 
