--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
    {
      margin-top: 500px;
    }
-   div{
+   .a{
      margin-top: 180px;
+     background-color:  rgba(255,255,255, 0.35);
    }
  </style>
 </head>
@@ -98,7 +99,7 @@
 <br>
 <br>
 <p>
-  <div>
+  <div class="a">
   <div id="disqus_thread"></div>
   <script>
       /**
