--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     background-image: url("jh.png");
     background-color: #cccccc;
     background-position: top;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat-x;
+    background-size: contain;
     color: white;
    }
    .menu{
@@ -74,8 +74,8 @@
      margin-top: 500px;
    }
    .a{
-     margin-top: 180px;
-     background-color:  rgba(255,255,255, 0.35);
+     margin-top: 300px;
+     background-color:  rgba(255,255,255, 0.45);
    }
  </style>
 </head>
