--- a/2.html
+++ b/2.html
@@ -6,28 +6,51 @@
   <style>
   body{
     margin:0;
+    overflow: overlay;
   }
     a {color:black;
       text-decoration: none;
     }
-  .saw{color:gray;}
-  #active{color:red;}
     h1 {
       font-size:35px;
       text-align: center;
       border-bottom:1px solid gray;
       margin:0;
       padding:20px;
-    }
-    ol{
+      }
+  
+      body::-webkit-scrollbar {
+        width:10px;
+      }
+      body::-webkit-scrollbar-thumb {
+        background-color: rgba(0,0,0, 0.3);
+        border-radius: 100px;
+      }
+   #grid ol{
       border-right:1px solid gray;
       width: 150px;
-      margin:5px;
+      margin:0;
       padding: 20px;
+      padding-left: 33px;
     }
   #grid{
     display: grid;
-    grid-template-columns: 220px 1fr ;
+    grid-template-columns: 214px 1fr ;
+  }
+  #active{color:red;}
+  #article{
+      padding-left: 20px;
+  }
+  @media(max-width:800px){
+    #grid{
+      display: block;
+    }
+    #grid ol{
+      border-right:none;
+    }
+    h1 {
+      border-bottom: none;
+    }
   }
   </style>
 </head>
@@ -35,15 +58,14 @@
   <h1><a href="index.html">WHO IS THIS GUY?</a></h1>
 
 <div id="grid">
-
-   <ol>
-    <li> <a href="1.html" class="saw">INTRODUCE</a></li>
-    <li> <a href="2.html" class="saw" id="active" >LICENSE</a></li>
+  <ol>
+    <li> <a href="1.html">INTRODUCE</a></li>
+    <li> <a href="2.html" id="active" >LICENSE</a></li>
     <li> <a href="3.html">PORTFOLIO</a></li>
     <li> <a href="4.html">POTENTIAL</a></li>
   </ol>
 
-  <div>
+  <div id="article">
     <h2>LICENSE 자격증</h2>
     <ul>
       <li>Driver's Lisense Type II Regular (up to 10-seater vehicle with GVWR less than 4 tons)</li>
@@ -103,6 +125,5 @@
 
 
 </p>
-
 </body>
 </html>
