--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <style>
   body{
     margin:0;
+    overflow: overlay;
+  }
+  body::-webkit-scrollbar {
+    width:10px;
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color: rgba(0,0,0, 0.3);
+    border-radius: 100px;
   }
     a {color:black;
       text-decoration: none;
@@ -35,10 +43,11 @@
  li{
    float: left;
    margin-left: 80px;
-   background-color:  rgba(255,255,255, 0.9);
+   background-color:  rgba(0,051,0, 0.65);
    margin-top: 30px;
-   padding-left: 10px;
-   padding-right: 10px;
+   padding-left: 20px;
+   padding-right: 20px;
+   border-radius: 50px;
 
 
  }
@@ -50,7 +59,7 @@
       }
 
   a{
-    color: gray;
+    color: rgba(255,255, 204, 1);
     font-weight: bold;
   }
   body{
@@ -58,7 +67,7 @@
     background-color: #cccccc;
     background-position: top;
     background-repeat: repeat-x;
-    background-size: contain;
+    background-size: 100%;
     color: white;
    }
    .menu{
@@ -77,6 +86,24 @@
      margin-top: 300px;
      background-color:  rgba(255,255,255, 0.45);
    }
+     @media(max-width:800px){
+       body{
+         background-size: 100%;
+         background-position: top;
+         background-repeat: no-repeat;
+         background-image: url("jh2.png");
+       }
+       .a{
+         margin-top:200px;
+         background: none;
+       }
+       .menu{
+         margin-top: 350px;
+       }
+       h3{
+         margin-left: 0px;
+       }
+     }
  </style>
 </head>
 <body>
