--- a/index.html
+++ b/index.html
@@ -44,18 +44,19 @@
    float: left;
    margin-left: 80px;
    background-color:  rgba(0,051,0, 0.65);
+   width: 203px;
    margin-top: 30px;
-   padding-left: 20px;
-   padding-right: 20px;
+   justify-content: center;
+   align-items: center;
    border-radius: 50px;
-
-
- }
+   display: flex;
+  }
  ul{
    display: block;
-   font-size: 25px;
+   font-size: 27px;
      list-style-type: none;
      margin: 0;
+     padding:0;
       }
 
   a{
@@ -78,6 +79,7 @@
    h4{
     color: white;
     margin-left: 10px;
+    margin-top: 120px;
    }
    {
      margin-top: 500px;
@@ -98,10 +100,26 @@
          background: none;
        }
        .menu{
-         margin-top: 350px;
+         margin-top: 400px;
        }
        h3{
          margin-left: 0px;
+       }
+       li{
+             width: 280px;
+            margin: 55px;
+            float: none;
+       }
+       ul{
+         margin-top: 80px;
+         font-size: 30px;
+         padding: 0;
+       }
+       h4{
+        color: white;
+        margin-left: 10px;
+        font-size: 25px;
+        margin-top: 0;
        }
      }
  </style>
